Further undo use of interning factory