@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 
+@SuppressWarnings("removal") // use "new Integer" to obtain different Objects
 public class Purity {
 	private int value;
 	private int shift;
@@ -11,7 +12,6 @@ public class Purity {
 	private LinkedList<Number> list1;
 	private List<Number> list2;
 
-	@SuppressWarnings("removal") // use "new Integer" to obtain different Objects
 	public Purity(int value, int shift) {
 		this.value = value;
 		this.shift = shift;
@@ -37,11 +37,11 @@ public class Purity {
 	}
 
 	public Number getNum() {
-		return (Number) Integer.valueOf(value);
+		return (Number) new Integer(value);
 	}
 
 	public Integer getJWrap() {
-		return Integer.valueOf(value);
+		return new Integer(value);
 	}
 
 	public int scale(int scale) {
